syntax = "proto3";

// FIT (Failure Injection Testing) API
//

package com.netflix.titus.runtime;

import "google/protobuf/empty.proto";

// ----------------------------------------------------------------------------
// FIT data model

message FitActionDescriptor {
    string kind = 1;

    string description = 2;

    map<string, string> configurableProperties = 3;
}

message FitAction {
    string id = 1;

    string actionKind = 2;

    map<string, string> properties = 3;
}

message FitInjection {
    string id = 1;

    repeated FitAction fitActions = 2;
}

message FitComponent {
    string id = 1;

    repeated FitComponent children = 2;

    repeated FitInjection injections = 3;
}

// ----------------------------------------------------------------------------
// API request/responses

message AddAction {
    string componentId = 1;

    string injectionId = 2;

    string actionKind = 3;

    string actionId = 4;

    map<string, string> properties = 5;
}
